# mml

./: .gitignore  README.md  ch-2.ipynb  pyproject.toml  streamlit_stuff.py
ISL-book/: 2.ipynb  3.ipynb  test.ipynb
auto_ml_app/: app.py
azure_ml/: test.ipynb
conformal/: 1.ipynb  copy.ipynb  fake.ipynb
conformal/intro book/: get_started.ipynb
mml-book/: ch-2.ipynb
nixtla-stuff/: 1.ipynb  2.ipynb
pandas/: flights.csv  pandas_stuff.ipynb
rust maybe/: rusty.ipynb
timeGPT/: test.ipynb
