[tool.poetry]
name = "mml"
version = "0.1.0"
description = "whatever"
authors = ["Wes Stone <wesstone@vt.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
ipywidgets = "^8.1.1"
seaborn = "^0.13.1"
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
