[tool.poetry]
name = "mml"
version = "0.1.0"
description = "whatever"
authors = ["Wes Stone <wesstone@vt.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
ipywidgets = "^8.1.1"
seaborn = "^0.13.1"
scikit-learn = "^1.4.0"
streamlit = "^1.31.1"
lazypredict-nightly = "^0.3.0"
pydantic = "^2.6.3"
azure-ai-ml = "^1.14.0"
statsmodels = "^0.14.1"
graphviz = "^0.20.3"
mapie = "^0.8.3"
ucimlrepo = "^0.0.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
